@@ -1,6 +1,16 @@
 2008-10-14  Tor Arne Vestbø  <tavestbo@trolltech.com>
 
         Reviewed by Simon.
+        
+        Fix QtWebKit scrollbar painting errors
+
+        * platform/qt/ScrollbarThemeQt.cpp:
+        (WebCore::ScrollbarThemeQt::paint):
+        (WebCore::ScrollbarThemeQt::paintScrollCorner):
+
+2008-10-14  Tor Arne Vestbø  <tavestbo@trolltech.com>
+
+        Reviewed by Simon.
 
         Fix scrollbar arrows for horizontal scrollbars
 
